Fine tuning search all resource types - increase width of dropdown-menu to prevent edge case wrapping - increase fixed widtho of icon to allow for 4 characters

--- a/frontend/public/components/_resource-dropdown.scss
+++ b/frontend/public/components/_resource-dropdown.scss
@@ -12,6 +12,9 @@
     min-width: 290px;
     overflow-x: hidden;
     overflow-y: auto;
+    @media (min-width: 480px) {
+      min-width: 350px;
+    }
     a {
       padding: 4px 20px 4px 6px;
     }
