--- a/frontend/public/components/_resource.scss
+++ b/frontend/public/components/_resource.scss
@@ -24,7 +24,7 @@
   display: flex;
   justify-content: center;
   text-align: center;
-  width: 40px;
+  width: 43px;
 }
 
 .co-m-resource-clusterrole,
